--- a/AnimationSample/Base.lproj/Main.storyboard
+++ b/AnimationSample/Base.lproj/Main.storyboard
@@ -79,8 +79,10 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2kv-93-wYS">
                                         <rect key="frame" x="0.0" y="0.0" width="0.0" height="44"/>
-                                        <color key="backgroundColor" red="1" green="0.078798994410000003" blue="0.10386747120000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" title="Stop"/>
+                                        <color key="backgroundColor" red="0.11299785986013267" green="0.36093602283054915" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Stop">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tuz-gw-Pzc">
                                         <rect key="frame" x="0.0" y="0.0" width="0.0" height="44"/>
